menambahkan cara kedua membuat todo

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 
 <body>
     <section>
+
         <div class="container">
             <h2 class="title">Todo</h2>
             <p class="sub-title">Apa aktivitasmu hari ini?</p>
         </div>
+
     </section>
     <section>
 
@@ -25,9 +27,13 @@
 
         <ul id="output">
         </ul>
-        </div>
 
-        <script src="main.js"></script>
+    </section>
+
+
+
+
+    <script src="main.js"></script>
 </body>
 
 </html>
